--- a/app/src/main/res/layout/watchlist.xml
+++ b/app/src/main/res/layout/watchlist.xml
@@ -16,4 +16,12 @@
 
         />
 
+    <ListView
+        android:id="@+id/watchlistId"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/section_label" />
+
 </RelativeLayout>
